--- a/static/compatibilities/argo-cd.yaml
+++ b/static/compatibilities/argo-cd.yaml
@@ -169,6 +169,7 @@ versions:
   chart_version: 7.9.1
   images: ['ghcr.io/dexidp/dex:v2.42.1', 'public.ecr.aws/docker/library/redis:7.2.8-alpine',
     'quay.io/argoproj/argocd:v2.14.11']
+  eolAt: '2025-11-04'
 - version: 2.14.1
   kube: ['1.32', '1.31', '1.30']
   requirements: []
@@ -177,6 +178,7 @@ versions:
   chart_version: 7.8.0
   images: ['ghcr.io/dexidp/dex:v2.41.1', 'public.ecr.aws/docker/library/redis:7.4.2-alpine',
     'quay.io/argoproj/argocd:v2.14.1']
+  eolAt: '2025-11-04'
 - version: 2.13.2
   kube: ['1.32', '1.31', '1.30']
   requirements: []
@@ -193,6 +195,7 @@ versions:
   chart_version: 7.7.12
   images: ['ghcr.io/dexidp/dex:v2.41.1', 'public.ecr.aws/docker/library/redis:7.4.1-alpine',
     'quay.io/argoproj/argocd:v2.13.2']
+  eolAt: '2025-08-13'
 - version: 2.13.0
   kube: ['1.31', '1.30', '1.29']
   requirements: []
@@ -210,6 +213,7 @@ versions:
   chart_version: 7.7.3
   images: ['ghcr.io/dexidp/dex:v2.41.1', 'public.ecr.aws/docker/library/redis:7.4.1-alpine',
     'quay.io/argoproj/argocd:v2.13.0']
+  eolAt: '2025-08-13'
 - version: 2.12.0
   kube: ['1.31', '1.30', '1.29']
   requirements: []
@@ -226,6 +230,7 @@ versions:
   chart_version: 7.4.3
   images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.2.4-alpine',
     'quay.io/argoproj/argocd:v2.12.0']
+  eolAt: '2025-05-06'
 - version: 2.11.0
   kube: ['1.30', '1.29', '1.28']
   requirements: []
@@ -234,6 +239,7 @@ versions:
   chart_version: 6.9.3
   images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.2.4-alpine',
     'quay.io/argoproj/argocd:v2.11.0']
+  eolAt: '2025-02-03'
 - version: 2.10.7
   kube: ['1.30', '1.29', '1.28']
   requirements: []
@@ -263,6 +269,7 @@ versions:
   chart_version: 6.7.15
   images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.2.4-alpine',
     'quay.io/argoproj/argocd:v2.10.7']
+  eolAt: '2024-11-04'
 - version: 2.10.0
   kube: ['1.29', '1.28', '1.27']
   requirements: []
@@ -295,6 +302,7 @@ versions:
   chart_version: 6.0.13
   images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.0.15-alpine',
     'quay.io/argoproj/argocd:v2.10.0']
+  eolAt: '2024-11-04'
 - version: 2.9.4
   kube: ['1.29', '1.28', '1.27']
   requirements: []
@@ -320,6 +328,7 @@ versions:
   chart_version: 5.53.1
   images: ['ghcr.io/dexidp/dex:v2.37.0', 'public.ecr.aws/docker/library/redis:7.0.13-alpine',
     'quay.io/argoproj/argocd:v2.9.4']
+  eolAt: '2024-08-05'
 - version: 2.9.0
   kube: ['1.28', '1.27', '1.26']
   requirements: []
@@ -350,6 +359,7 @@ versions:
   chart_version: 5.51.1
   images: ['ghcr.io/dexidp/dex:v2.37.0', 'public.ecr.aws/docker/library/redis:7.0.13-alpine',
     'quay.io/argoproj/argocd:v2.9.0']
+  eolAt: '2024-08-05'
 - version: 2.8.4
   kube: ['1.28', '1.27', '1.26']
   requirements: []
@@ -370,6 +380,7 @@ versions:
   chart_version: 5.47.0
   images: ['ghcr.io/dexidp/dex:v2.37.0', 'public.ecr.aws/docker/library/redis:7.0.13-alpine',
     'quay.io/argoproj/argocd:v2.8.4']
+  eolAt: '2024-05-07'
 - version: 2.8.3
   kube: ['1.28', '1.27', '1.24']
   requirements: []
@@ -378,3 +389,5 @@ versions:
   chart_version: 5.46.2
   images: ['ghcr.io/dexidp/dex:v2.37.0', 'public.ecr.aws/docker/library/redis:7.0.11-alpine',
     'quay.io/argoproj/argocd:v2.8.3']
+  eolAt: '2024-05-07'
+name: argo-cd
