--- a/static/compatibilities/cert-manager.yaml
+++ b/static/compatibilities/cert-manager.yaml
@@ -151,6 +151,7 @@ versions:
   chart_version: 1.17.0
   images: ['quay.io/jetstack/cert-manager-cainjector:v1.17.0', 'quay.io/jetstack/cert-manager-controller:v1.17.0',
     'quay.io/jetstack/cert-manager-startupapicheck:v1.17.0', 'quay.io/jetstack/cert-manager-webhook:v1.17.0']
+  eolAt: '2025-10-07'
 - version: 1.16.0
   kube: ['1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25']
   requirements: []
@@ -201,6 +202,7 @@ versions:
   chart_version: 1.16.0
   images: ['quay.io/jetstack/cert-manager-cainjector:v1.16.0', 'quay.io/jetstack/cert-manager-controller:v1.16.0',
     'quay.io/jetstack/cert-manager-startupapicheck:v1.16.0', 'quay.io/jetstack/cert-manager-webhook:v1.16.0']
+  eolAt: '2025-06-10'
 - version: 1.15.0
   kube: ['1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25']
   requirements: []
@@ -252,6 +254,7 @@ versions:
   chart_version: 1.15.0
   images: ['quay.io/jetstack/cert-manager-cainjector:v1.15.0', 'quay.io/jetstack/cert-manager-controller:v1.15.0',
     'quay.io/jetstack/cert-manager-startupapicheck:v1.15.0', 'quay.io/jetstack/cert-manager-webhook:v1.15.0']
+  eolAt: '2025-02-03'
 - version: 1.14.0
   kube: ['1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24']
   requirements: []
@@ -304,6 +307,7 @@ versions:
   chart_version: 1.14.0
   images: ['quay.io/jetstack/cert-manager-cainjector:v1.14.0', 'quay.io/jetstack/cert-manager-controller:v1.14.0',
     'quay.io/jetstack/cert-manager-startupapicheck:v1.14.0', 'quay.io/jetstack/cert-manager-webhook:v1.14.0']
+  eolAt: '2024-10-03'
 - version: 1.13.0
   kube: ['1.27', '1.26', '1.25', '1.24', '1.23', '1.22', '1.21']
   requirements: []
@@ -357,6 +361,7 @@ versions:
   chart_version: 1.13.0
   images: ['quay.io/jetstack/cert-manager-cainjector:v1.13.0', 'quay.io/jetstack/cert-manager-controller:v1.13.0',
     'quay.io/jetstack/cert-manager-ctl:v1.13.0', 'quay.io/jetstack/cert-manager-webhook:v1.13.0']
+  eolAt: '2024-06-05'
 - version: 1.12.0
   kube: ['1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24', '1.23',
     '1.22']
@@ -411,6 +416,7 @@ versions:
   chart_version: 1.12.0
   images: ['quay.io/jetstack/cert-manager-cainjector:v1.12.0', 'quay.io/jetstack/cert-manager-controller:v1.12.0',
     'quay.io/jetstack/cert-manager-ctl:v1.12.0', 'quay.io/jetstack/cert-manager-webhook:v1.12.0']
+  eolAt: '2025-05-19'
 - version: 1.11.0
   kube: ['1.27', '1.26', '1.25', '1.24', '1.23', '1.22', '1.21']
   requirements: []
@@ -461,6 +467,7 @@ versions:
   chart_version: 1.11.0
   images: ['quay.io/jetstack/cert-manager-cainjector:v1.11.0', 'quay.io/jetstack/cert-manager-controller:v1.11.0',
     'quay.io/jetstack/cert-manager-ctl:v1.11.0', 'quay.io/jetstack/cert-manager-webhook:v1.11.0']
+  eolAt: '2023-09-12'
 - version: 1.10.0
   kube: ['1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20']
   requirements: []
@@ -1143,3 +1150,4 @@ versions:
   chart_version: 0.11.0
   images: ['quay.io/jetstack/cert-manager-cainjector:v0.11.0', 'quay.io/jetstack/cert-manager-controller:v0.11.0',
     'quay.io/jetstack/cert-manager-webhook:v0.11.0']
+name: cert-manager
