--- a/static/compatibilities/istio.yaml
+++ b/static/compatibilities/istio.yaml
@@ -12,6 +12,7 @@ versions:
   summary: null
   chart_version: 1.28.0
   images: ['docker.io/istio/pilot:1.28.0']
+  eolAt: '2026-07-31'
 - version: 1.27.0
   kube: ['1.33', '1.32', '1.31', '1.30', '1.29']
   requirements: []
@@ -19,6 +20,7 @@ versions:
   summary: null
   chart_version: 1.27.0
   images: ['docker.io/istio/pilot:1.27.0']
+  eolAt: '2026-04-30'
 - version: 1.26.0
   kube: ['1.33', '1.32', '1.31', '1.30', '1.29']
   requirements: []
@@ -26,6 +28,7 @@ versions:
   summary: null
   chart_version: 1.26.0
   images: ['docker.io/istio/pilot:1.26.0']
+  eolAt: '2025-12-22'
 - version: 1.25.0
   kube: ['1.32', '1.31', '1.30', '1.29']
   requirements: []
@@ -33,6 +36,7 @@ versions:
   summary: null
   chart_version: 1.25.0
   images: ['docker.io/istio/pilot:1.25.0']
+  eolAt: '2025-09-30'
 - version: 1.24.0
   kube: ['1.31', '1.30', '1.29', '1.28']
   requirements: []
@@ -40,6 +44,7 @@ versions:
   summary: null
   chart_version: 1.24.0
   images: ['docker.io/istio/pilot:1.24.0']
+  eolAt: '2025-06-24'
 - version: 1.23.0
   kube: ['1.30', '1.29', '1.28', '1.27']
   requirements: []
@@ -47,6 +52,7 @@ versions:
   summary: null
   chart_version: 1.23.0
   images: ['docker.io/istio/pilot:1.23.0']
+  eolAt: '2025-04-16'
 - version: 1.22.0
   kube: ['1.30', '1.29', 1.28', '1.27']
   requirements: []
@@ -54,6 +60,7 @@ versions:
   summary: null
   chart_version: 1.22.0
   images: ['docker.io/istio/pilot:1.22.0']
+  eolAt: '2025-01-22'
 - version: 1.21.0
   kube: ['1.29', 1.28', '1.27', '1.26']
   requirements: []
@@ -61,6 +68,7 @@ versions:
   summary: null
   chart_version: 1.21.0
   images: ['docker.io/istio/pilot:1.21.0']
+  eolAt: '2024-09-27'
 - version: 1.20.0
   kube: ['1.28', '1.27', '1.26', '1.25']
   requirements: []
@@ -68,6 +76,7 @@ versions:
   summary: null
   chart_version: 1.20.0
   images: ['docker.io/istio/pilot:1.20.0']
+  eolAt: '2024-06-25'
 - version: 1.18.0
   kube: ['1.27', '1.26', '1.25', '1.24']
   requirements: []
@@ -75,6 +84,7 @@ versions:
   summary: null
   chart_version: 1.18.0
   images: ['docker.io/istio/pilot:1.18.0']
+  eolAt: '2024-01-04'
 - version: 1.17.0
   kube: ['1.26', '1.25', '1.24', '1.23']
   requirements: []
@@ -82,6 +92,7 @@ versions:
   summary: null
   chart_version: 1.17.0
   images: ['docker.io/istio/pilot:1.17.0']
+  eolAt: '2023-10-27'
 - version: 1.16.0
   kube: ['1.25', '1.24', '1.23', '1.22']
   requirements: []
@@ -89,6 +100,7 @@ versions:
   summary: null
   chart_version: 1.16.0
   images: ['docker.io/istio/pilot:1.16.0']
+  eolAt: '2023-07-25'
 - version: 1.14.0
   kube: ['1.24', '1.23', '1.22', '1.21']
   requirements: []
@@ -96,6 +108,7 @@ versions:
   summary: null
   chart_version: 1.14.0
   images: ['docker.io/istio/pilot:1.14.0']
+  eolAt: '2022-12-27'
 - version: 1.13.0
   kube: ['1.23', '1.22', '1.21', '1.20']
   requirements: []
@@ -103,6 +116,7 @@ versions:
   summary: null
   chart_version: 1.13.0
   images: ['docker.io/istio/pilot:1.13.0']
+  eolAt: '2022-10-12'
 - version: 1.12.0
   kube: ['1.22', '1.21', '1.20', '1.19']
   requirements: []
@@ -110,28 +124,34 @@ versions:
   summary: null
   chart_version: 1.12.0
   images: ['docker.io/istio/pilot:1.12.0']
+  eolAt: '2022-07-12'
 - version: 1.11.0
   kube: ['1.22', '1.21', '1.20', '1.19', '1.18']
   requirements: []
   incompatibilities: []
   summary: null
+  eolAt: '2022-03-25'
 - version: 1.9.0
   kube: ['1.20', '1.19', '1.18', '1.17']
   requirements: []
   incompatibilities: []
   summary: null
+  eolAt: '2021-10-08'
 - version: 1.8.0
   kube: ['1.19', '1.18', '1.17', '1.16']
   requirements: []
   incompatibilities: []
   summary: null
+  eolAt: '2021-05-12'
 - version: 1.7.0
   kube: ['1.18', '1.17', '1.16']
   requirements: []
   incompatibilities: []
   summary: null
+  eolAt: '2021-02-25'
 - version: 1.1.0
   kube: ['1.21', '1.20', '1.19', '1.18']
   requirements: []
   incompatibilities: []
   summary: null
+name: istio
