--- a/static/compatibilities/argo-cd.yaml
+++ b/static/compatibilities/argo-cd.yaml
@@ -2,6 +2,7 @@ icon: https://raw.githubusercontent.com/pluralsh/plural-artifacts/main/argo-cd/p
 git_url: https://github.com/argoproj/argo-cd
 release_url: https://github.com/argoproj/argo-cd/releases/tag/v{vsn}
 helm_repository_url: https://argoproj.github.io/argo-helm
+eolApiSlug: argocd
 versions:
 - version: 3.2.6
   kube: ['1.35', '1.34', '1.33']
@@ -172,6 +173,7 @@ versions:
   chart_version: 7.9.1
   images: ['ghcr.io/dexidp/dex:v2.42.1', 'public.ecr.aws/docker/library/redis:7.2.8-alpine',
     'quay.io/argoproj/argocd:v2.14.11']
+  eolAt: '2025-11-04'
 - version: 2.14.1
   kube: ['1.32', '1.31', '1.30']
   requirements: []
@@ -180,6 +182,7 @@ versions:
   chart_version: 7.8.0
   images: ['ghcr.io/dexidp/dex:v2.41.1', 'public.ecr.aws/docker/library/redis:7.4.2-alpine',
     'quay.io/argoproj/argocd:v2.14.1']
+  eolAt: '2025-11-04'
 - version: 2.13.2
   kube: ['1.32', '1.31', '1.30']
   requirements: []
@@ -196,6 +199,7 @@ versions:
   chart_version: 7.7.12
   images: ['ghcr.io/dexidp/dex:v2.41.1', 'public.ecr.aws/docker/library/redis:7.4.1-alpine',
     'quay.io/argoproj/argocd:v2.13.2']
+  eolAt: '2025-08-13'
 - version: 2.13.0
   kube: ['1.31', '1.30', '1.29']
   requirements: []
@@ -213,6 +217,7 @@ versions:
   chart_version: 7.7.3
   images: ['ghcr.io/dexidp/dex:v2.41.1', 'public.ecr.aws/docker/library/redis:7.4.1-alpine',
     'quay.io/argoproj/argocd:v2.13.0']
+  eolAt: '2025-08-13'
 - version: 2.12.0
   kube: ['1.31', '1.30', '1.29']
   requirements: []
@@ -229,6 +234,7 @@ versions:
   chart_version: 7.4.3
   images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.2.4-alpine',
     'quay.io/argoproj/argocd:v2.12.0']
+  eolAt: '2025-05-06'
 - version: 2.11.0
   kube: ['1.30', '1.29', '1.28']
   requirements: []
@@ -237,6 +243,7 @@ versions:
   chart_version: 6.9.3
   images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.2.4-alpine',
     'quay.io/argoproj/argocd:v2.11.0']
+  eolAt: '2025-02-03'
 - version: 2.10.7
   kube: ['1.30', '1.29', '1.28']
   requirements: []
@@ -266,6 +273,7 @@ versions:
   chart_version: 6.7.15
   images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.2.4-alpine',
     'quay.io/argoproj/argocd:v2.10.7']
+  eolAt: '2024-11-04'
 - version: 2.10.0
   kube: ['1.29', '1.28', '1.27']
   requirements: []
@@ -298,6 +306,7 @@ versions:
   chart_version: 6.0.13
   images: ['ghcr.io/dexidp/dex:v2.38.0', 'public.ecr.aws/docker/library/redis:7.0.15-alpine',
     'quay.io/argoproj/argocd:v2.10.0']
+  eolAt: '2024-11-04'
 - version: 2.9.4
   kube: ['1.29', '1.28', '1.27']
   requirements: []
@@ -323,6 +332,7 @@ versions:
   chart_version: 5.53.1
   images: ['ghcr.io/dexidp/dex:v2.37.0', 'public.ecr.aws/docker/library/redis:7.0.13-alpine',
     'quay.io/argoproj/argocd:v2.9.4']
+  eolAt: '2024-08-05'
 - version: 2.9.0
   kube: ['1.28', '1.27', '1.26']
   requirements: []
@@ -353,6 +363,7 @@ versions:
   chart_version: 5.51.1
   images: ['ghcr.io/dexidp/dex:v2.37.0', 'public.ecr.aws/docker/library/redis:7.0.13-alpine',
     'quay.io/argoproj/argocd:v2.9.0']
+  eolAt: '2024-08-05'
 - version: 2.8.4
   kube: ['1.28', '1.27', '1.26']
   requirements: []
@@ -373,6 +384,7 @@ versions:
   chart_version: 5.47.0
   images: ['ghcr.io/dexidp/dex:v2.37.0', 'public.ecr.aws/docker/library/redis:7.0.13-alpine',
     'quay.io/argoproj/argocd:v2.8.4']
+  eolAt: '2024-05-07'
 - version: 2.8.3
   kube: ['1.28', '1.27', '1.24']
   requirements: []
@@ -381,3 +393,5 @@ versions:
   chart_version: 5.46.2
   images: ['ghcr.io/dexidp/dex:v2.37.0', 'public.ecr.aws/docker/library/redis:7.0.11-alpine',
     'quay.io/argoproj/argocd:v2.8.3']
+  eolAt: '2024-05-07'
+name: argo-cd
