--- a/static/compatibilities/flux.yaml
+++ b/static/compatibilities/flux.yaml
@@ -3,6 +3,7 @@ git_url: https://github.com/fluxcd/flux2
 release_url: https://github.com/fluxcd/flux2/releases/tag/v{vsn}
 helm_repository_url: https://fluxcd-community.github.io/helm-charts
 chart_name: flux2
+eolApiSlug: flux
 versions:
 - version: 2.7.0
   kube: ['1.35', '1.34', '1.33', '1.32']
@@ -19,3 +20,4 @@ versions:
   requirements: []
   incompatibilities: []
   summary: null
+name: flux
