--- a/static/compatibilities/gatekeeper.yaml
+++ b/static/compatibilities/gatekeeper.yaml
@@ -3,6 +3,7 @@ git_url: https://github.com/open-policy-agent/gatekeeper
 release_url: https://github.com/open-policy-agent/gatekeeper/releases/tag/v{vsn}
 helm_repository_url: https://open-policy-agent.github.io/gatekeeper/charts
 chart_name: gatekeeper
+eolApiSlug: gatekeeper
 versions:
 - version: 3.21.0
   kube: ['1.34', '1.33', '1.32']
@@ -137,6 +138,7 @@ versions:
         on implicit generation.']
   chart_version: 3.19.1
   images: ['curlimages/curl:8.12.0', 'openpolicyagent/gatekeeper-crds:v3.19.1', 'openpolicyagent/gatekeeper:v3.19.1']
+  eolAt: '2025-11-19'
 - version: 3.19.0
   kube: ['1.32', '1.31', '1.30']
   requirements: []
@@ -158,6 +160,7 @@ versions:
         \ add it to the controller-manager deployment."]
   chart_version: 3.19.0
   images: ['curlimages/curl:8.12.0', 'openpolicyagent/gatekeeper-crds:v3.19.0', 'openpolicyagent/gatekeeper:v3.19.0']
+  eolAt: '2025-11-19'
 - version: 3.18.3
   kube: ['1.33', '1.32', '1.31']
   requirements: []
@@ -187,6 +190,7 @@ versions:
         relied on default operations behavior.']
   chart_version: 3.18.3
   images: ['curlimages/curl:7.83.1', 'openpolicyagent/gatekeeper-crds:v3.18.3', 'openpolicyagent/gatekeeper:v3.18.3']
+  eolAt: '2025-07-24'
 - version: 3.18.0
   kube: ['1.32', '1.31', '1.30']
   requirements: []
@@ -233,6 +237,7 @@ versions:
         \ in ConstraintTemplates/Constraints; annotations are no longer the mechanism."]
   chart_version: 3.18.0
   images: ['curlimages/curl:7.83.1', 'openpolicyagent/gatekeeper-crds:v3.18.0', 'openpolicyagent/gatekeeper:v3.18.0']
+  eolAt: '2025-07-24'
 - version: 3.17.2
   kube: ['1.32', '1.31', '1.30']
   requirements: []
@@ -272,6 +277,7 @@ versions:
         need review.']
   chart_version: 3.17.2
   images: ['curlimages/curl:7.83.1', 'openpolicyagent/gatekeeper-crds:v3.17.2', 'openpolicyagent/gatekeeper:v3.17.2']
+  eolAt: '2025-04-09'
 - version: 3.17.0
   kube: ['1.31', '1.30', '1.29']
   requirements: []
@@ -316,6 +322,7 @@ versions:
         the appropriate Kubernetes API version support.']
   chart_version: 3.17.0
   images: ['curlimages/curl:7.83.1', 'openpolicyagent/gatekeeper-crds:v3.17.0', 'openpolicyagent/gatekeeper:v3.17.0']
+  eolAt: '2025-04-09'
 - version: 3.16.0
   kube: ['1.30', '1.29', '1.28']
   requirements: []
@@ -362,6 +369,7 @@ versions:
         in CI/CD or admission workflows.']
   chart_version: 3.16.0
   images: ['curlimages/curl:7.83.1', 'openpolicyagent/gatekeeper-crds:v3.16.0', 'openpolicyagent/gatekeeper:v3.16.0']
+  eolAt: '2024-12-12'
 - version: 3.15.0
   kube: ['1.29', '1.28', '1.27']
   requirements: []
@@ -399,6 +407,7 @@ versions:
         ll need an alternative architecture or image strategy after upgrading."]
   chart_version: 3.15.0
   images: ['curlimages/curl:7.83.1', 'openpolicyagent/gatekeeper-crds:v3.15.0', 'openpolicyagent/gatekeeper:v3.15.0']
+  eolAt: '2024-08-21'
 - version: 3.14.2
   kube: ['1.30', '1.29', '1.28']
   requirements: []
@@ -413,6 +422,7 @@ versions:
     breaking_changes: []
   chart_version: 3.14.2
   images: ['curlimages/curl:7.83.1', 'openpolicyagent/gatekeeper-crds:v3.14.2', 'openpolicyagent/gatekeeper:v3.14.2']
+  eolAt: '2024-05-09'
 - version: 3.14.1
   kube: ['1.29', '1.28', '1.27']
   requirements: []
@@ -461,6 +471,7 @@ versions:
         matches/selectors in policies, monitoring, or automation.']
   chart_version: 3.14.1
   images: ['curlimages/curl:7.83.1', 'openpolicyagent/gatekeeper-crds:v3.14.1', 'openpolicyagent/gatekeeper:v3.14.1']
+  eolAt: '2024-05-09'
 - version: 3.14.0
   kube: ['1.28', '1.27', '1.26']
   requirements: []
@@ -497,6 +508,7 @@ versions:
     breaking_changes: []
   chart_version: 3.14.0
   images: ['curlimages/curl:7.83.1', 'openpolicyagent/gatekeeper-crds:v3.14.0', 'openpolicyagent/gatekeeper:v3.14.0']
+  eolAt: '2024-05-09'
 - version: 3.13.2
   kube: ['1.28', '1.27', '1.26']
   requirements: []
@@ -523,6 +535,7 @@ versions:
     breaking_changes: []
   chart_version: 3.13.2
   images: ['curlimages/curl:7.83.1', 'openpolicyagent/gatekeeper-crds:v3.13.2', 'openpolicyagent/gatekeeper:v3.13.2']
+  eolAt: '2024-02-05'
 - version: 3.13.0
   kube: ['1.27', '1.26', '1.25']
   requirements: []
@@ -564,6 +577,7 @@ versions:
         versions, confirm compatibility before upgrading.']
   chart_version: 3.13.0
   images: ['curlimages/curl:7.83.1', 'openpolicyagent/gatekeeper-crds:v3.13.0', 'openpolicyagent/gatekeeper:v3.13.0']
+  eolAt: '2024-02-05'
 - version: 3.12.0
   kube: ['1.27', '1.26', '1.25']
   requirements: []
@@ -600,6 +614,7 @@ versions:
     breaking_changes: []
   chart_version: 3.12.0
   images: ['curlimages/curl:7.83.1', 'openpolicyagent/gatekeeper-crds:v3.12.0', 'openpolicyagent/gatekeeper:v3.12.0']
+  eolAt: '2023-11-01'
 - version: 3.11.1
   kube: ['1.27', '1.26', '1.25']
   requirements: []
@@ -628,6 +643,7 @@ versions:
         in v3.11.0; plaintext providers will stop working until updated.]
   chart_version: 3.11.1
   images: ['curlimages/curl:7.83.1', 'openpolicyagent/gatekeeper-crds:v3.11.1', 'openpolicyagent/gatekeeper:v3.11.1']
+  eolAt: '2023-08-08'
 - version: 3.11.0
   kube: ['1.25', '1.24', '1.23']
   requirements: []
@@ -677,6 +693,7 @@ versions:
         (PSP removal may require policy/process changes).']
   chart_version: 3.11.0
   images: ['curlimages/curl:7.83.1', 'openpolicyagent/gatekeeper-crds:v3.11.0', 'openpolicyagent/gatekeeper:v3.11.0']
+  eolAt: '2023-08-08'
 - version: 3.10.0
   kube: ['1.25', '1.24', '1.23']
   requirements: []
@@ -1058,3 +1075,4 @@ versions:
   summary: null
   chart_version: 3.1.0
   images: ['openpolicyagent/gatekeeper:v3.1.0']
+name: gatekeeper
