--- a/static/compatibilities/jaeger.yaml
+++ b/static/compatibilities/jaeger.yaml
@@ -2,6 +2,7 @@ icon: https://avatars.githubusercontent.com/u/28545596?s=200&v=4
 git_url: https://github.com/jaegertracing/jaeger
 release_url: https://github.com/jaegertracing/jaeger/releases/tag/v{vsn}
 helm_repository_url: https://jaegertracing.github.io/helm-charts
+eolApiSlug: jaeger
 versions:
 - version: 1.62.0
   kube: ['1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24', '1.23', '1.22', '1.21',
@@ -129,3 +130,4 @@ versions:
   kube: ['1.23', '1.22', '1.21', '1.20', '1.19']
   requirements: []
   incompatibilities: []
+name: jaeger
