--- a/static/compatibilities/keda.yaml
+++ b/static/compatibilities/keda.yaml
@@ -2,6 +2,7 @@ icon: https://avatars.githubusercontent.com/u/49917779?s=48&v=4
 git_url: https://github.com/kedacore/keda
 release_url: https://github.com/kedacore/keda/releases/tag/v{vsn}
 helm_repository_url: https://kedacore.github.io/charts
+eolApiSlug: keda
 versions:
 - version: 2.18.0
   kube: ['1.33', '1.32', '1.31']
@@ -21,57 +22,68 @@ versions:
   incompatibilities: []
   summary: null
   chart_version: 2.16.0
+  eolAt: '2025-10-08'
 - version: 2.15.0
   kube: ['1.30', '1.29', '1.28']
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 2.15.0
+  eolAt: '2025-04-07'
 - version: 2.14.0
   kube: ['1.29', '1.28', '1.27']
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 2.14.2
+  eolAt: '2024-11-07'
 - version: 2.13.0
   kube: ['1.29', '1.28', '1.27']
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 2.13.1
+  eolAt: '2024-08-01'
 - version: 2.12.0
   kube: ['1.28', '1.27', '1.26']
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 2.12.0
+  eolAt: '2024-04-25'
 - version: 2.11.0
   kube: ['1.27', '1.26', '1.25']
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 2.11.0
+  eolAt: '2024-01-18'
 - version: 2.10.0
   kube: ['1.26', '1.25', '1.24']
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 2.10.1
+  eolAt: '2023-09-28'
 - version: 2.9.0
   kube: ['1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 2.9.0
+  eolAt: '2023-06-22'
 - version: 2.8.0
   kube: ['1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19', '1.18', '1.17']
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 2.8.1
+  eolAt: '2023-03-09'
 - version: 2.7.0
   kube: ['1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19', '1.18', '1.17']
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 2.7.0
+  eolAt: '2022-12-09'
+name: keda
