--- a/static/compatibilities/vitess.yaml
+++ b/static/compatibilities/vitess.yaml
@@ -1,6 +1,7 @@
 icon: https://avatars.githubusercontent.com/u/33043890?s=48&v=4
 git_url: https://github.com/vitessio/vitess
 release_url: https://github.com/vitessio/vitess/releases/tag/v{vsn}
+eolApiSlug: vitess
 versions:
 - version: 23.0.0
   kube: ['1.34', '1.33', '1.32', '1.31']
@@ -87,3 +88,4 @@ versions:
   requirements: []
   incompatibilities: []
   summary: null
+name: vitess
