--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -4299,6 +4299,14 @@
   publisher: eG Innovations
 - name: eks-node-monitoring-agent
   versions:
+  - version: v1.5.0-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.4.3-eksbuild.2
     compatibilities:
     - '1.34'
