--- a/assets/package.json
+++ b/assets/package.json
@@ -80,6 +80,7 @@
     "country-code-lookup": "0.0.23",
     "dayjs": "1.11.13",
     "diff": "7.0.0",
+    "ejs": "4.0.1",
     "encrypt-storage": "2.13.2",
     "escape-carriage": "1.3.1",
     "fast-xml-parser": "5.3.2",
