--- a/static/compatibilities/coredns.yaml
+++ b/static/compatibilities/coredns.yaml
@@ -22,7 +22,7 @@ versions:
   incompatibilities: []
   summary: null
   chart_version: 1.31.0
-  images: ['coredns/coredns:1.11.1']
+  images: []
 - version: 1.10.1
   kube: ['1.28', '1.27']
   requirements: []
