--- a/static/compatibilities/vector.yaml
+++ b/static/compatibilities/vector.yaml
@@ -3,6 +3,13 @@ git_url: https://github.com/vectordotdev/vector/
 release_url: https://github.com/vectordotdev/vector/releases/tag/v{vsn}
 helm_repository_url: https://helm.vector.dev/
 versions:
+- version: 0.53.0
+  kube: ['1.35', '1.34', '1.33']
+  requirements: []
+  incompatibilities: []
+  summary: null
+  chart_version: 0.50.0
+  images: ['timberio/vector:0.53.0-distroless-libc']
 - version: 0.52.0
   kube: ['1.34', '1.33', '1.32']
   requirements: []
