--- a/assets/package.json
+++ b/assets/package.json
@@ -143,6 +143,7 @@
     "@testing-library/react": "16.0.1",
     "@testing-library/user-event": "14.4.3",
     "@types/content-disposition": "0.5.8",
+    "@types/ejs": "3.1.5",
     "@types/humanize-duration": "3.27.4",
     "@types/jsdom": "21.1.5",
     "@types/lodash": "4.17.13",
