--- a/charts/console/templates/deployment.yaml
+++ b/charts/console/templates/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: console
+  annotations:
+{{ include "console.annotations" . | nindent 4 }}
   labels:
 {{ include "console.labels" . | indent 4 }}
 spec:
