--- a/charts/controller/templates/deployment.yaml
+++ b/charts/controller/templates/deployment.yaml
@@ -3,6 +3,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "controller.fullname" . }}-controller
+  annotations:
+    platform.plural.sh/repository-url: https://github.com/pluralsh/console.git
   labels:
     app.kubernetes.io/component: manager
     app.kubernetes.io/part-of: plural-deployment-controller
