--- a/static/compatibilities/kube-prometheus-stack.yaml
+++ b/static/compatibilities/kube-prometheus-stack.yaml
@@ -5,22 +5,25 @@ readme_url: https://raw.githubusercontent.com/prometheus-community/helm-charts/m
 helm_repository_url: https://prometheus-community.github.io/helm-charts
 chart_changelog_url: https://raw.githubusercontent.com/prometheus-community/helm-charts/refs/heads/main/charts/kube-prometheus-stack/UPGRADE.md
 versions:
-- version: 81.2.2
+- version: 81.3.0
   kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
     '1.25']
   requirements: []
   incompatibilities: []
   summary:
     helm_changes: ''
-    chart_updates: [Bumps kube-prometheus-stack chart dependencies via Renovate (non-major
-        updates). No functional chart template changes called out in the provided
+    chart_updates: [Bumped kube-prometheus-stack chart dependencies with non-major
+        updates (Renovate). No chart template/values changes called out in the provided
         notes.]
-    features: [No new user-facing features mentioned in the provided release notes;
-        the change is a dependency patch-level update.]
-    breaking_changes: []
-  chart_version: 81.2.2
+    features: ['Maintenance release: refreshes subchart/dependency versions with non-major
+        updates; no user-facing features were highlighted in the provided release
+        notes.']
+    breaking_changes: ["None mentioned in the provided release notes; treat as low-risk,\
+        \ but dependency bumps can still introduce behavior changes\u2014validate\
+        \ in staging."]
+  chart_version: 81.3.0
   images: ['docker.io/bats/bats:v1.4.1', 'docker.io/grafana/grafana:12.3.1', 'ghcr.io/jkroepke/kube-webhook-certgen:1.7.4',
-    'quay.io/kiwigrid/k8s-sidecar:2.5.0', 'quay.io/prometheus-operator/prometheus-operator:v0.88.0',
+    'quay.io/kiwigrid/k8s-sidecar:2.5.0', 'quay.io/prometheus-operator/prometheus-operator:v0.88.1',
     'quay.io/prometheus/alertmanager:v0.30.1', 'quay.io/prometheus/node-exporter:v1.10.2',
     'quay.io/prometheus/prometheus:v3.9.1', 'registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.18.0']
 - version: 81.2.0
