Cluster Upgrade Agent
This is leveraging two new pieces of infra:

1. Coding agent runtime - workhorse to make arbitrary codechanges as we need
2. In-Memory agent engine - this allows us to spin off a few in parallel w/o having to roundtrip to db unnecessarily

Basically uses semantic search + gitops search to allow an agent to craft a good prompt to hand off to the coding agent to exec

--- a/charts/controller/crds/deployments.plural.sh_globalservices.yaml
+++ b/charts/controller/crds/deployments.plural.sh_globalservices.yaml
@@ -455,6 +455,11 @@ spec:
                         description: IgnoreHooks indicates whether to completely ignore
                           Helm hooks when actualizing this service.
                         type: boolean
+                      kustomizePostrender:
+                        description: KustomizePostrender is a folder containing a
+                          kustomization to apply to the result of rendering this service's
+                          manifests.
+                        type: string
                       luaFile:
                         description: |-
                           LuaFile to use to generate Helm configuration.
